# shirr-prototype

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  essentia_jni.cpp
android/app/src/main/cpp/include/essentia/: version.h
android/app/src/main/kotlin/com/example/shirr/: AudioDecoder.kt  MainActivity.kt
assets/weights/: crepe.tflite
lib/: main.dart
lib/components/: disk_dialogue.dart  menu_item.dart  page_under_dev.dart  wave_form_painter.dart
lib/core/: constants.dart  theme.dart
lib/screens/audio_analyzer/: audio_analyzer_screen.dart  bottom_menu_bar.dart  circular_icon_button.dart  dialogues.dart  mic_player_widget.dart  plot_page_view.dart  theme_colors.dart  top_menu_bar.dart
lib/screens/audio_analyzer/plots/: amp_plot_card.dart  beat_tracker.dart  const_q_tf_card.dart  fft_plot_card.dart  mfcc_chart.dart  phase_circle_card.dart  relative_loudness_card.dart  spectral_centroid.dart  spectral_flatness.dart  spectral_roll_off.dart
lib/screens/audio_generator/: audio_generator_screen.dart
lib/screens/audio_visualizer/: audio_visualizer_screen.dart
lib/screens/intro/: intro_screen.dart
lib/screens/main_menu/: main_menu_screen.dart
lib/services/: audio_decoder.dart  media_controller.dart  media_picker.dart  mic_controller.dart  snapshot_handler.dart  wav_file_controller.dart
test/: widget_test.dart
